# fista-crewai-aiagents-development-course

agentsdetails/: README.md  poem.txt  pyproject.toml
agentsdetails/src/agentsdetails/: main.py
agentsdetails/src/agentsdetails/crews/blogscrew/: blogs_crew.py
agentsdetails/src/agentsdetails/crews/blogscrew/config/: agents.yaml  tasks.yaml
flowdemo/: pyproject.toml
flowdemo/src/flowdemo/: __init__.py  flowdemo.py
newagent/: README.md  pyproject.toml
newagent/src/newagent/: main.py
newagent/src/newagent/crews/blog_crew/: blog_crew.py
newagent/src/newagent/crews/blog_crew/config/: agents.yaml  tasks.yaml
