[project]
name = "agentsdetails"
version = "0.1.0"
description = "agentsdetails using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
blogswrite = "agentsdetails.main:blogswrite"
plot = "agentsdetails.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
